Add machine learning notes to resource table

--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
                         <td><a href='https://github.com/grantwforsythe/CS50x' class='table-url' target='_blank'><span class='t'>Repository</span> <i class='fa fa-external-link'></i></a></td>
                      </tr>
                      <tr>
+                        <td>Machine Learning Notes <div class='popup' onclick='togglePopup("ml-notes")'></div></td>
+                        <td>2021</td>
+                        <td><a href='https://github.com/grantwforsythe/ml-notes' class='table-url' target='_blank'><span class='t'>Repository</span> <i class='fa fa-external-link'></i></a></td>
+                     </tr>
+                     <tr>
                         <td>Python Morsels <div class='popup' onclick='togglePopup("morsels")'><i class='fa fa-info-circle'></i><span class='popuptext' id='morsels'>Solutions for Weekly Morsels Exercises</span></div></td>
                         <td>2021</td>
                         <td><a href='https://github.com/grantwforsythe/morsels' class='table-url' target='_blank'><span class='t'>Solutions</span> <i class='fa fa-external-link'></i></a></td>
