Add wsbpickz to portfolio

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                      <h2 class='indescrip t'>Portfolio</h2>
                      <br>
                      <p class="centered">
+                        <a href="https://github.com/grantwforsythe/wsbpickz" target="_blank"><img class="portfolio-pin" src="https://github-readme-stats.vercel.app/api/pin/?username=grantwforsythe&repo=wsbpickz" /></a>
                         <a href="https://github.com/grantwforsythe/gym-bot" target="_blank"><img class="portfolio-pin" src="https://github-readme-stats.vercel.app/api/pin/?username=grantwforsythe&repo=gym-bot" /></a>
                         <a href="https://github.com/grantwforsythe/mood" target="_blank"><img class="portfolio-pin" src="https://github-readme-stats.vercel.app/api/pin/?username=grantwforsythe&repo=mood" /></a>
                         <a href="https://github.com/grantwforsythe/goodwin-keen-model" target="_blank"><img class="portfolio-pin" src="https://github-readme-stats.vercel.app/api/pin/?username=grantwforsythe&repo=goodwin-keen-model" /></a>
