--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div></a>
          </div>
          <div class='container'>
-            <a href='resume/resume.pdf'><i class='fa fa-file-text fa-3x nav-icon small-icon' aria-hidden=true></i>
+            <a href='https://github.com/grantwforsythe/resume/blob/main/resume.pdf'><i class='fa fa-file-text fa-3x nav-icon small-icon' aria-hidden=true></i>
             <div class='overlay'>
                <div class='text'><b class='nav-text t'>Resumé</b></div>
             </div></a>
@@ -101,11 +101,6 @@
                         <td>CS50x <div class='popup' onclick='togglePopup("cs50x")'></div></td>
                         <td>2021-2022</td>
                         <td><a href='https://github.com/grantwforsythe/CS50x' class='table-url' target='_blank'><span class='t'>Repository</span> <i class='fa fa-external-link'></i></a></td>
-                     </tr>
-                     <tr>
-                        <td>Machine Learning Notes <div class='popup' onclick='togglePopup("ml-notes")'></div></td>
-                        <td>2021</td>
-                        <td><a href='https://github.com/grantwforsythe/ml-notes' class='table-url' target='_blank'><span class='t'>Repository</span> <i class='fa fa-external-link'></i></a></td>
                      </tr>
                      <tr>
                         <td>Python Morsels <div class='popup' onclick='togglePopup("morsels")'><i class='fa fa-info-circle'></i><span class='popuptext' id='morsels'>Solutions for Weekly Morsels Exercises</span></div></td>
