Add Advent of Code 2021 to Resources

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
                         <td><a href='https://github.com/grantwforsythe/project-euler' class='table-url' target='_blank'><span class='t'>Solutions</span> <i class='fa fa-external-link'></i></a></td>
                      </tr>
                      <tr>
+                        <td>Advent of Code 2021 <div class='popup' onclick='togglePopup("aoc2021")'><i class='fa fa-info-circle'></i><span class='popuptext' id='aoc2021'>Solutions for Advent of Code Programming Contest 2021 Advent Calendar</span></div></td>
+                        <td>2021</td>
+                        <td><a href='https://github.com/grantwforsythe/advent-of-code-2021' class='table-url' target='_blank'><span class='t'>Solutions</span> <i class='fa fa-external-link'></i></a></td>
+                     </tr>
+                     <tr>
                         <td>Advent of Code 2020 <div class='popup' onclick='togglePopup("aoc2020")'><i class='fa fa-info-circle'></i><span class='popuptext' id='aoc2020'>Solutions for Advent of Code Programming Contest 2020 Advent Calendar</span></div></td>
                         <td>2020</td>
                         <td><a href='https://github.com/grantwforsythe/advent-of-code-2020' class='table-url' target='_blank'><span class='t'>Solutions</span> <i class='fa fa-external-link'></i></a></td>
