--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <link rel='stylesheet' href='static/css/mobile.css' />
       <link rel='icon' href='static/imgs/icon.jpg'>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <script src='static/js/profile.js' defer></script>
+      <script src='static/js/popup-handler.js' defer></script>
    </head>
    <body id='body'>
       <nav class='title fixed-elements'>
@@ -49,21 +51,22 @@
                <section id='about'>
                   <div class="lightback">
                      <h2 class='indescrip t'>Software Enthusiast / Lifelong Student</h2>
-                     <br><br>
                      <div class='res-segment centered'>
                         <div id='tldr-button' class='text-module t' style='display: none;'>TL;DR</div>
                         <div id='less-button' class='text-module t' style='display: none;'>Less</div> 
                         <div id='default-button' class='text-module t' style='display: none;'>Default</div>
                         <div id='more-button' class='text-module t' style='display: none;'>More</div>
                      </div>
-                     <br><br>
                      <div class=''></div>
-                     <div id='default' class='subdescrip'>Hello, thanks for stopping by!</div>
-                     <div id='default' class='subdescrip'>I have always been deeply passionate about mathematics as I find there is an inherent beauty in the subject – whether it be in expressing <a href='https://www.youtube.com/watch?v=OkmNXy7er84'>abstract problems</a> or the geometric properties of complex numbers, e.g., the <a href='https://en.wikipedia.org/wiki/Mandelbrot_set'>Mandelbrot set</a>. Consequently, this passion has led me to study the subject at a higher level at McMaster University.</div>
-                     <div id='default' class='subdescrip'>Likewise, I have a keen interest in computer science. In High School, I was fortunate enough to be able to take a programming class where I learned Java. For a year-end project I wrote a program, with a complete GUI, that allowed a user to play blackjack against the computer. Following High School, I stopped studying computer science and it was only after studying mathematics, was my interest later rekindled.</div>
-                     <div id='default' class='subdescrip'>With continued advancements in machine learning and AI, mathematics and statistics will play an ever-larger role in our future. A future that I intended to be part of it.</div>
+                     <div id='default' class='subdescrip'>
+                        <p>
+                           Hello, thanks for stopping by!
+                           I have always been deeply passionate about mathematics as I find there is an inherent beauty in the subject – whether it be in expressing <a href='https://www.youtube.com/watch?v=OkmNXy7er84'>abstract problems</a> or the geometric properties of complex numbers, e.g., the <a href='https://en.wikipedia.org/wiki/Mandelbrot_set'>Mandelbrot set</a>. Consequently, this passion has led me to study the subject at a higher level at McMaster University.
+                           Likewise, I have a keen interest in computer science. In High School, I was fortunate enough to be able to take a programming class where I learned Java. For a year-end project I wrote a program, with a complete GUI, that allowed a user to play blackjack against the computer. Following High School, I stopped studying computer science and it was only after studying mathematics, was my interest later rekindled.
+                           With continued advancements in machine learning and AI, mathematics and statistics will play an ever-larger role in our future. A future that I intended to be part of it.
+                        </p>
+                     </div>
                      <br><br>
-                     <script src='static/js/profile.js'></script>
                   </div>
                </section>
                <section id="portfolio">
@@ -89,7 +92,6 @@
             <div class='lightback'>
                <h2 class='indescrip t'>Resources</h2>
                <br>
-               <script src='static/js/popup-handler.js'></script>
                <div id='resource-dir' class='res-segment'>
                   <table id="resource-table">
                      <tr>
