--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description"
-      content="Grant Forsythe - Software Developer. Connect with me on GitHub, LinkedIn, and Twitter.">
+      content="Grant Forsythe - Full-stack Software Engineer. Connect with me on GitHub and LinkedIn.">
    <meta name="author" content="Grant Forsythe">
+
    <meta property="og:title" content="Grant Forsythe">
    <meta property="og:type" content="website">
    <meta property="og:url" content="https://grantwforsythe.com">
@@ -14,9 +15,16 @@
    <meta property="og:image" content="https://avatars.githubusercontent.com/u/23422098?v=4">
    <meta property="og:image:alt" content="Grant Forsythe">
    <meta property="og:description"
-      content="Grant Forsythe - Full-stack Software Engineer at Brightly Software. Connect with me on GitHub, LinkedIn, and Twitter.">
+      content="Grant Forsythe - Full-stack Software Engineer at Brightly Software. Connect with me on GitHub and LinkedIn.">
    <meta property="og:locale" content="en_US">
-   <title>Grant Forsythe</title>
+
+   <title>Grant Forsythe </title>
+
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+
    <style>
       :root {
          --bg-color: #f8f8f8;
@@ -189,6 +197,7 @@
          }
       }
    </style>
+
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
       crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
