feat: add analytics

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet">
 
+   <!-- Cloudflare Web Analytics -->
+   <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+      data-cf-beacon='{"token": "2ae6b93992294e6ea96c4d1136795aad"}'></script>
+
    <style>
       :root {
          --bg-color: #f8f8f8;
