feat: update subtitle

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <header>
       <div class="container">
          <h1>Grant Forsythe</h1>
-         <p class="subtitle">Full-stack Software Engineer @ Brightly Software</p>
+         <p class="subtitle">Product Focused Full-stack Software Engineer</p>
       </div>
    </header>
 
